# Claude-Code-Workflow

./: .demo_code_block.db  .gitattributes  .gitignore  .mcp.json  .npmignore  .temp-memory-content.txt  AGENTS.md  API_SETTINGS_IMPLEMENTATION.md  ARCHITECTURE.md  CHANGELOG-v4.1.0.md  CHANGELOG-v4.1.1.md  CHANGELOG-v4.2.0.md  CHANGELOG.md  CLAUDE.md  CODEX_LENS_AUTO_HYBRID.md  COMMAND_DOCS_AUDIT_REPORT.md  COMMAND_FLOW_STANDARD.md  COMMAND_REFERENCE.md  COMMAND_SPEC.md  COMMAND_STRUCTURE_DESIGN.md  COMMAND_TEMPLATE_EXECUTOR.md  COMMAND_TEMPLATE_ORCHESTRATOR.md  CONTRIBUTING.md  DASHBOARD_GUIDE.md  DASHBOARD_OPERATIONS.md  DASHBOARD_OPERATIONS_EN.md  EMBEDDINGS_IMPROVEMENTS_SUMMARY.md  EXAMPLES.md  FAQ.md  GETTING_STARTED.md  GETTING_STARTED_CN.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  INSTALL_CN.md  Install-Claude.ps1  Install-Claude.sh  LITE_FIX_DESIGN.md  MCP_FINAL_FIX.md  MCP_FIX_SUMMARY.md  MCP_INSTALL_DEBUG.md  (+65 more)
ccw-litellm/: README.md  litellm-config.yaml.example  pyproject.toml
ccw-litellm/src/ccw_litellm/: __init__.py  cli.py
ccw-litellm/src/ccw_litellm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ccw-litellm/tests/: test_interfaces.py
codex-lens/: .coverage  .env.example  ASSOCIATION_TREE_IMPLEMENTATION.md  CHAIN_SEARCH_IMPLEMENTATION.md  CHANGELOG.md  DEPENDENCIES.md  LSP_CONNECTION_TEST_REPORT.md  README.md  SEMANTIC_SEARCH_USAGE.md  _debug_output.txt  _test_output.txt  _test_prompt.txt  _test_result.txt  _tmp_search.json  _tmp_search2.json  _tmp_verbose.json  coir_benchmark_full.py  debug_semantic_search.py  debug_semantic_v2.py  lsp-servers.json  misleading_test.db  pyproject.toml  requirements.in  test_chain_search.py  test_simple_function.py  verify_watcher.py
codex-lens-v2/: README.md  conftest.py  pyproject.toml
codex-lens-v2/scripts/: index_and_search.py  test_small_e2e.py
codex-lens-v2/src/codexlens_search/: bridge.py  config.py  model_manager.py
codex-lens-v2/tests/integration/: conftest.py
codex-lens-v2/tests/unit/: test_bridge.py  test_config.py  test_core.py  test_embed.py  test_rerank.py  test_search.py
codex-lens/.github/workflows/: security.yml
codex-lens/.pytest-temp/test_load_settings_reads_ignor0/: settings.json
codex-lens/benchmarks/: accuracy_queries_ccw_smart_search.jsonl  accuracy_queries_codexlens.jsonl  analyze_methods.py  binary_search_microbenchmark.py  cascade_benchmark.py  compare_accuracy_labeled.py  compare_ccw_smart_search_stage2.py  compare_semantic_methods.py  compare_staged_realtime_vs_dense_rerank.py  method_contribution_analysis.py
codex-lens/benchmarks/results/: accuracy_2026-02-11_codexlens.json  accuracy_2026-02-11_codexlens_precomputed.json  cascade_benchmark.json  ccw_smart_search_stage2.json  ccw_smart_search_stage2_sample4_20260314.json  ccw_smart_search_stage2_smoke1_cpu_reranker_20260314.json  compare_2026-02-09.json  compare_2026-02-09_dir_rr_fast4.json  compare_2026-02-09_dir_rr_fast5.json  compare_2026-02-09_dir_rr_fast6.json  compare_2026-02-09_keepalive3.json  compare_2026-02-09_keepalive3b.json  compare_2026-02-09_run2.json  compare_2026-02-09_score_fast3.json  compare_2026-02-09_score_fast4.json  compare_2026-02-09_score_fast5.json  compare_2026-02-09_score_fast6.json  compare_2026-02-09_score_fast7.json  compare_2026-02-10_dir_rr_fast7.json  compare_2026-02-10_path_fast7.json  compare_2026-02-10_score_fast7.json  compare_2026-02-11_dir_rr_fast7.json  compare_2026-02-11_path_fast7.json  compare_2026-02-11_score_fast7.json  method_contribution_analysis.json  tmp_compare1.json  tmp_compare3_ok_cpu.json  tmp_compare3_ok_cpu_dedup.json
codex-lens/docs/: CHAIN_SEARCH_QUICKREF.md  CLI_INTEGRATION_SUMMARY.md  CODEXLENS_LSP_API_SPEC.md  CONFIGURATION.md  DESIGN_EVALUATION_REPORT.md  DOCSTRING_LLM_HYBRID_DESIGN.md  HYBRID_SEARCH_ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  LLM_ENHANCED_SEARCH_GUIDE.md  LLM_ENHANCEMENT_TEST_RESULTS.md  LLM_REMOVAL_SUMMARY.md  LSP_INTEGRATION_CHECKLIST.md  LSP_INTEGRATION_PLAN.md  MCP_ENDPOINT_DESIGN.md  MIGRATION_005_SUMMARY.md  MISLEADING_COMMENTS_TEST_RESULTS.md  MULTILEVEL_CHUNKER_DESIGN.md  PURE_VECTOR_SEARCH_GUIDE.md  REAL_LSP_SERVER_PLAN.md  SEARCH_ANALYSIS_SUMMARY.md  SEARCH_COMPARISON_ANALYSIS.md  SEMANTIC_GRAPH_DESIGN.md  T6-CLI-Integration-Summary.md  test-quality-enhancements.md
codex-lens/examples/: association_tree_demo.py  debug_uri_format.py  search_comparison_benchmark.py  simple_search_comparison.py  test_lsp_capabilities.py  test_lsp_references.py  test_lsp_tree.py  test_raw_lsp.py  test_raw_response.py  test_simple_call_hierarchy.py  test_uri_consistency.py  test_wait_for_analysis.py
codex-lens/scripts/: bootstrap_reranker_local.py  compare_search_methods.py  generate_embeddings.py  inspect_llm_summaries.py  requirements-reranker-local.txt  show_llm_analysis.py  test_misleading_comments.py
codex-lens/src/codex_lens.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
codex-lens/src/codexlens/: config.py  entities.py  env_config.py  errors.py
codex-lens/tests/: TEST_SUITE_SUMMARY.md  __init__.py  conftest.py  fix_sql.py  simple_validation.py  test_ann_index.py  test_api_reranker.py  test_association_tree.py  test_binary_searcher.py  test_cascade_strategies.py  test_chain_search.py  test_chain_search_engine.py  test_cli_help.py  test_cli_hybrid_search.py  test_cli_output.py  test_cli_search.py  test_clustering_strategies.py  test_code_extractor.py  test_compare_ccw_smart_search_stage2.py  test_config.py  test_config_cascade.py  test_config_ignore_patterns.py  test_config_search_env_overrides.py  test_config_staged_env_overrides.py  test_deepwiki_store.py  test_deepwiki_types.py  test_dual_fts.py  test_embedder.py  test_embedding_backend_availability.py  test_embedding_status_root_model.py  test_encoding.py  test_enrichment.py  test_entities.py  test_errors.py  test_file_cache.py  test_global_graph_expander.py  test_global_index.py  test_global_relationships.py  test_global_symbol_index.py  test_graph_analyzer.py  (+57 more)
codex-lens/tests/api/: test_references.py  test_semantic_integration.py  (+1 more)
(+3277 files in other folders)
